--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,26 @@
     "import problem_unittests as tests\n",
     "\n",
     "int_text, vocab_to_int, int_to_vocab, token_dict = helper.load_preprocess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6341, 8437, 13670, 19868, 19868, 19868, 18642, 13670, 8437, 2533, 8047, 5515, 11169, 6522, 17933, 13276, 8047, 18665, 19868, 9360, 19868, 19868, 19868, 12063, 13931, 2329, 14412, 9360, 19259, 7931, 6687, 1675, 2561, 13670, 7213, 6341, 8437, 20442, 13443, 19259, 7931, 19868, 19868, 19868, 6341, 5474, 4678, 13215, 20657, 11702]\n",
+      "['this', 'is', 'out', '||period||', '||period||', '||period||', 'and', 'out', 'is', 'one', 'of', 'the', 'single', 'most', 'enjoyable', 'experiences', 'of', 'life', '||period||', 'people', '||period||', '||period||', '||period||', 'did', 'you', 'ever', 'hear', 'people', 'talking', 'about', 'we', 'should', 'go', 'out', '||question_mark||', 'this', 'is', 'what', 'theyre', 'talking', 'about', '||period||', '||period||', '||period||', 'this', 'whole', 'thing', '||comma||', 'were', 'all']\n"
+     ]
+    }
+   ],
+   "source": [
+    "i_end_example = 50\n",
+    "print(int_text[:i_end_example])\n",
+    "print([int_to_vocab[i] for i in int_text[:i_end_example]])"
    ]
   },
   {
@@ -259,11 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -318,11 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torch.utils.data.dataloader.DataLoader object at 0x7f680e1a26d8>\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "\n",
@@ -335,13 +367,28 @@
     "    :param batch_size: The size of each batch; the number of sequences in a batch\n",
     "    :return: DataLoader with batched data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement function\n",
+    "    # DONE: Implement function\n",
+    "    features = [] # future tensors\n",
+    "    targets = [] # future tensors\n",
     "    \n",
-    "    # return a dataloader\n",
-    "    return None\n",
+    "    # total number of words in a batch\n",
+    "    batch_size_total = batch_size * sequence_length\n",
+    "    # batches we can make\n",
+    "    n_batches = len(words)//batch_size_total\n",
+    "    # keep enough words to make full batches\n",
+    "    words = words[:n_batches * batch_size_total]\n",
+    "    # create features and targets\n",
+    "    for n in range(len(words)-sequence_length):\n",
+    "        features.append(words[n:n+sequence_length])\n",
+    "        targets.append(words[n+sequence_length])\n",
+    "    \n",
+    "    data = TensorDataset(torch.Tensor(features), torch.Tensor(targets))\n",
+    "    return torch.utils.data.DataLoader(data, batch_size=batch_size, shuffle=True)\n",
     "\n",
     "# there is no test for this function, but you are encouraged to create\n",
-    "# print statements and tests of your own\n"
+    "# print statements and tests of your own\n",
+    "\n",
+    "print(batch_data(int_text[:i_end_example], 8, 50))\n"
    ]
   },
   {
@@ -383,9 +430,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 5])\n",
+      "tensor([[ 26.,  27.,  28.,  29.,  30.],\n",
+      "        [ 36.,  37.,  38.,  39.,  40.],\n",
+      "        [ 21.,  22.,  23.,  24.,  25.],\n",
+      "        [ 19.,  20.,  21.,  22.,  23.],\n",
+      "        [ 14.,  15.,  16.,  17.,  18.],\n",
+      "        [  7.,   8.,   9.,  10.,  11.],\n",
+      "        [ 39.,  40.,  41.,  42.,  43.],\n",
+      "        [ 17.,  18.,  19.,  20.,  21.],\n",
+      "        [  4.,   5.,   6.,   7.,   8.],\n",
+      "        [ 15.,  16.,  17.,  18.,  19.]])\n",
+      "\n",
+      "torch.Size([10])\n",
+      "tensor([ 31.,  41.,  26.,  24.,  19.,  12.,  44.,  22.,   9.,  20.])\n"
+     ]
+    }
+   ],
    "source": [
     "# test dataloader\n",
     "\n",
